--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 	   <div id="listItems">
 	      <h2 class="header">Your Shopping List</h2>
 	      <p id="help4" class="help">When you enter an item, it will become part of your shopping list. Click the item itself to check it off, turning it from red to blue.You can also click the 'x' button to remove it off your shopping list entirely!</p>
-	      <p class="list-item checked">Pizza<button class="remove">X</button></p>
-	      <p class="list-item checked">Hot Pockets<button class="remove">X</button></p>
-	      <p class="list-item unchecked">Ice<button class="remove">X</button></p>
+	      <div id="listArea">
+	         <p class="list-item unchecked">Pizza<button class="remove">X</button></p>
+	         <p class="list-item checked">Ice<button class="remove">X</button></p>
+	      </div>
 	   </div>
 	   <div>
 	      <button id="clearList" class="header">Clear List</button>
